--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
+    "firebase": "^10.14.0",
     "lucide-react": "^0.447.0",
     "next": "14.0.3",
     "react": "^18",
