--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
-    "firebase": "^10.14.0",
+    "firebase": "^9.22.1",
     "lucide-react": "^0.447.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "undici": "^6.19.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.10",
