--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.0",
     "undici": "^6.19.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.10",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.6.3"
   }
 }
