--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
-    "firebase": "^9.22.1",
+    "@react-email/components": "0.0.25",
+    "axios": "^1.7.7",
+    "firebase": "^9.23.0",
     "lucide-react": "^0.447.0",
     "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "resend": "^4.0.0",
     "undici": "^6.19.8"
   },
